--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,10 +6,11 @@
   font-family: Outfit;
 }
 
-.no-scrollbar::-webkit-scrollbar {
+
+.scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
-.no-scrollbar {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
 }
